--- a/main/res/layout/activity_main.xml
+++ b/main/res/layout/activity_main.xml
@@ -2,10 +2,15 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/start_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.ndk_lesson.anovikov.teamtrackerclient.MainActivity">
 
+    <!--<fragment
+        android:id="@+id/fragment_conteiner"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"></fragment>
     <TextView
         android:id="@+id/get_text"
         android:layout_width="wrap_content"
@@ -14,6 +19,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />-->
 
 </android.support.constraint.ConstraintLayout>
